--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@next/font": "13.3.2",
     "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.39.0",
