--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "js-cookie": "^3.0.5",
     "next": "13.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
