--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@heroicons/react": "^2.0.17",
     "@next/font": "13.3.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "js-cookie": "^3.0.5",
+    "mongoose": "^7.1.0",
     "next": "13.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
