--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "js-cookie": "^3.0.5",
     "mongoose": "^7.1.0",
     "next": "13.3.2",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
