products from mongodb

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.17",
     "@next/font": "13.3.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.39.0",
