--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGODB_URI=mongodb+srv://aufung1912:j2t269GrVNEdzzTV@cluster0.hmeubhn.mongodb.net/E-commerce?retryWrites=true&w=majority
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=somethingsecret
