--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MONGODB_URI=mongodb+srv://aufung1912:j2t269GrVNEdzzTV@cluster0.hmeubhn.mongodb.net/E-commerce?retryWrites=true&w=majority
 
+PAYPAL_Client_ID=Aen_vfhCgbct7gHM8Vn8ZhRI4mwMpJfOa9XVvTRM2rfmzdYwo3jo-bcil77Cd0ObcUEMvc5o4YC4jd1-
+
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=somethingsecret
