--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.3.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "js-cookie": "^3.0.5",
@@ -24,6 +25,7 @@
     "next": "13.3.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
