--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.0",
+    "cloudinary": "^1.36.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "js-cookie": "^3.0.5",
