--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ MONGODB_URI=mongodb+srv://aufung1912:j2t269GrVNEdzzTV@cluster0.hmeubhn.mongodb.n
 PAYPAL_Client_ID=Aen_vfhCgbct7gHM8Vn8ZhRI4mwMpJfOa9XVvTRM2rfmzdYwo3jo-bcil77Cd0ObcUEMvc5o4YC4jd1-
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dcjvbymmj
-NEXT_PUBLIC_CLOUDINARY_API_KEY=cloudinary://135762993362753:3f1b2guG0ktb9nErRSMIC7UvUBY@dcjvbymmj
-CLOUDINARY_SECRET=x
+NEXT_PUBLIC_CLOUDINARY_API_KEY=135762993362753
+CLOUDINARY_SECRET=3f1b2guG0ktb9nErRSMIC7UvUBY
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXTAUTH_URL=http://localhost:3000
