--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cloudinary": "^1.36.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "heroicons": "^2.0.17",
     "js-cookie": "^3.0.5",
     "mongoose": "^7.1.0",
     "next": "13.3.2",
